--- a/index.html
+++ b/index.html
@@ -11,17 +11,91 @@
         rel="stylesheet" />
     <link
         href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Staatliches&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
 
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <header>
-        hola
+    <header class="header">
+
+        <div class="contenedor">
+
+            <div class="nav">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre no-margin centrar-texto">
+                        Blog<span class="logo__span">DeCafé</span>
+                    </h1>
+                </a>
+
+                <nav class="navblog">
+                    <a href="nosotros.html" class="navblog__enlace">Nosotros</a>
+                    <a href="cursos" class="navblog__enlace">Cursos</a>
+                    <a href="contacto" class="navblog__enlace">Contacto</a>
+                </nav>
+            </div>
+
+        </div> <!-- contenedor -->
+
+        <div class="header__texto centrar-texto">
+            <h2 class="no-margin">Blog de cafe con consejos y cursos</h2>
+            <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos </p>
+        </div> <!-- header__texto -->
+
     </header>
 
+    <div class="contenido-principal contenedor">
 
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog1.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de Grano de Café</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ullam dignissimos, dolore,
+                        consectetur mollitia error quaerat quibusdam facilis nisi et, consequuntur distinctio rem magni
+                        amet minima exercitationem odio illum sint.</p>
+                    <a href="entrada.hmtl" class="boton boton--primario">Leer más</a>
+                </div>
+            </article><!--Entrada-->
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog2.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">3 Deliciosas Recetas de Café</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ullam dignissimos, dolore,
+                        consectetur mollitia error quaerat quibusdam facilis nisi et, consequuntur distinctio rem magni
+                        amet minima exercitationem odio illum sint.</p>
+                    <a href="entrada.hmtl" class="boton boton--primario">Leer más</a>
+                </div>
+            </article><!--Entrada-->
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog3.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Beneficios del Café</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ullam dignissimos, dolore,
+                        consectetur mollitia error quaerat quibusdam facilis nisi et, consequuntur distinctio rem magni
+                        amet minima exercitationem odio illum sint.</p>
+                    <a href="entrada.hmtl" class="boton boton--primario">Leer más</a>
+                </div>
+            </article><!--Entrada-->
+
+        </main><!--Main-->
+        <aside class="sidebar">
+            <h3>Nuestros Cursos y Talleres</h3>
+        </aside>
+    </div>
 </body>
 
 </html>
