Se agregaron cambios

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
                 <nav class="navblog">
                     <a href="nosotros.html" class="navblog__enlace">Nosotros</a>
-                    <a href="cursos" class="navblog__enlace">Cursos</a>
-                    <a href="contacto" class="navblog__enlace">Contacto</a>
+                    <a href="cursos.html" class="navblog__enlace">Cursos</a>
+                    <a href="contacto.html" class="navblog__enlace">Contacto</a>
                 </nav>
             </div>
 
@@ -59,7 +59,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ullam dignissimos, dolore,
                         consectetur mollitia error quaerat quibusdam facilis nisi et, consequuntur distinctio rem magni
                         amet minima exercitationem odio illum sint.</p>
-                    <a href="entrada.hmtl" class="boton boton--primario">Leer más</a>
+                    <a href="entrada.html" class="boton boton--primario">Leer más</a>
                 </div>
             </article><!--Entrada-->
 
@@ -73,7 +73,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ullam dignissimos, dolore,
                         consectetur mollitia error quaerat quibusdam facilis nisi et, consequuntur distinctio rem magni
                         amet minima exercitationem odio illum sint.</p>
-                    <a href="entrada.hmtl" class="boton boton--primario">Leer más</a>
+                    <a href="entrada.html" class="boton boton--primario">Leer más</a>
                 </div>
             </article><!--Entrada-->
 
@@ -87,15 +87,57 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ullam dignissimos, dolore,
                         consectetur mollitia error quaerat quibusdam facilis nisi et, consequuntur distinctio rem magni
                         amet minima exercitationem odio illum sint.</p>
-                    <a href="entrada.hmtl" class="boton boton--primario">Leer más</a>
+                    <a href="entrada.html" class="boton boton--primario">Leer más</a>
                 </div>
             </article><!--Entrada-->
 
         </main><!--Main-->
         <aside class="sidebar">
             <h3>Nuestros Cursos y Talleres</h3>
+            <ul class="cursos no-padding">
+                <li class="widget-curso">
+                    <h4 class="no-margin">Técnicas de Extracción de Café</h4>
+                    <p class="widget-curso__label">Precio:
+                        <span class="widget-curso__info">Gratis</span>
+                    </p>
+                    <p class="widget-curso__label">Cupo:
+                        <span class="widget-curso__info">20</span>
+                    </p>
+                    <a href="entrada.html" class="boton2 boton--secundario">Más información</a>
+                </li> <!--Widget-curso-->
+
+                <li class="widget-curso">
+                    <h4 class="no-margin">4 Recetas de Café para Principiantes</h4>
+                    <p class="widget-curso__label">Precio:
+                        <span class="widget-curso__info">Gratis</span>
+                    </p>
+                    <p class="widget-curso__label">Cupo:
+                        <span class="widget-curso__info">20</span>
+                    </p>
+                    <a href="entrada.html" class="boton2 boton--secundario">Más información</a>
+                </li> <!--Widget-curso-->
+            </ul>
+
         </aside>
     </div>
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="nav">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre no-margin centrar-texto">
+                        Blog<span class="logo__span">DeCafé</span>
+                    </h1>
+                </a>
+
+                <nav class="navblog">
+                    <a href="nosotros.html" class="navblog__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navblog__enlace">Cursos</a>
+                    <a href="contacto.html" class="navblog__enlace">Contacto</a>
+                </nav>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
